--- a/Notebook/JonasMedina_Pract2.ipynb
+++ b/Notebook/JonasMedina_Pract2.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "071c611d-dc4c-4444-ba43-84ba966bd90a",
+   "metadata": {},
+   "source": [
+    "# Tipología y ciclo de vida de los datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "86d1008e-ce8c-46ea-8351-2e8669dd0e7c",
    "metadata": {},
    "source": [
-    "## Obtención de los datos"
+    "## 1. Obtención de los datos"
    ]
   },
   {
@@ -1314,7 +1322,7 @@
    "id": "47076baf-3946-46b2-9663-5ab81011712e",
    "metadata": {},
    "source": [
-    "## Análisis inicial y procesamiento de los datos"
+    "## 2. Análisis inicial y procesamiento de los datos"
    ]
   },
   {
@@ -3111,7 +3119,7 @@
    "id": "088be955-de76-4969-8bde-42253cfac20e",
    "metadata": {},
    "source": [
-    "# Análisis de los datos"
+    "# 3. Análisis de los datos"
    ]
   },
   {
@@ -3525,7 +3533,7 @@
    "id": "3d62531e-8a6a-4a69-8a2f-4e9adb9b8575",
    "metadata": {},
    "source": [
-    "## Análisis de la normalidad y homogeneidad de la varianza"
+    "## 4. Análisis de la normalidad y homogeneidad"
    ]
   },
   {
@@ -3533,7 +3541,7 @@
    "id": "c1aaa80c-8122-41f6-aa1a-686527115a65",
    "metadata": {},
    "source": [
-    "### Normalidad"
+    "### Normalidad de la muestra General"
    ]
   },
   {
@@ -3541,7 +3549,7 @@
    "id": "4ca77546-2b81-46d4-a03d-f2017d6e0cbb",
    "metadata": {},
    "source": [
-    "#### Análisis gráfico\n",
+    "#### Análisis gráfico \n",
     "\n",
     "Se crean los gráficos cuartil-cuartil para ver cuanto se aproximan a la normalidad ambas distribuciones"
    ]
@@ -3698,7 +3706,7 @@
    "id": "c631ea79-4af5-47b5-a355-703db03aac9d",
    "metadata": {},
    "source": [
-    "## Aplicación de pruebas estadísticas"
+    "### 4.1. Aplicación de pruebas estadísticas de forma generel y en profundidad"
    ]
   },
   {
@@ -4049,7 +4057,7 @@
    "id": "1f162565-00bc-4545-9e04-907b1e6ed1d4",
    "metadata": {},
    "source": [
-    "### Estudio de la correlación"
+    "### 5.2 Estudio de la correlación"
    ]
   },
   {
@@ -4604,7 +4612,7 @@
    "id": "fbbd39c9-8103-4032-80a8-aa093c8f2b42",
    "metadata": {},
    "source": [
-    "### Regresiones ###"
+    "## 5. Regresiones ###"
    ]
   },
   {
@@ -4681,7 +4689,7 @@
    "id": "0446408d-d645-4c5b-a275-c8e8edc366cb",
    "metadata": {},
    "source": [
-    "# Conclusiones\n",
+    "# 6. Conclusiones\n",
     "\n",
     "Ha quedado demostrado que la muestra a nivel de regresores, y por lo tanto uso para predicciones, no es recomendable, al menos con el tamaño y calidad actuales.\n",
     "Tenemos que tener en cuenta, que es tremendamente poder tener cifras exactas de todos los países de la UE historicamente, con un tamaño reseñable para conseguir estos objetivos, pues la digitalización de estos sectores, en algunos países es reciente.\n",
